# kr

./: .gitignore  1-10.c  1-12.c  1-17.c  1-18.c  1-4.c  char.c  hello.c  reverse.c
1-20/: 1-20.c  1-20.test
1-21/: 1-21.c  1-21.test  Makefile
1-23/: 1-23.c  Makefile
1-24/: 1-24.c  1-24.test
1-x/: 1-12.c  1-15.c  1-16.c  1-19.c  1-8.c  1-9.c  1.10.c  1.5.4.c  1.6.c  1.7.c  1.9.c  1.9.y2k01.c  test.txt
2-1/: 2-1.c  Makefile
2-10/: 2-10.c~
2-2/: 2-2.c
2-3/: 2-3.c  Makefile
2-4/: 2-4.c
2-5/: 2-5.c
2-6/: 2-6.c
2-7/: 2-7.c
2-8/: 2-8.c
2-9/: 2-9.c~  Makefile
3-1/: 3-1.c  3-1.c~  Makefile
3-2/: 3-2.c
3-3/: 3-3.c
3-4/: 3-4.c
3-5/: 3-5.c  Makefile
3-6/: 3-6.c
4-1/: 4-1.c
4-11/: input.c
4-12/: input.c
4-13/: input.c
4-14/: input.c
4-2/: 4-2.c
4-3/: 4-3.c
4-4/: 4-4.c
4-5/: 4-5.c
4-6/: 4-6.c
4-7/: 4-7.c
4-9/: 4-9.c
4.4/: 2.c  4.4.c  Makefile  otherfile.h
5-1/: input.c
5-10/: Makefile  input.c
5-11/: Makefile  entabtests  entabtestsdata  input.c  tests.sh
5-12/: Makefile  input.c  tests.sh
5-13/: Makefile  fivelines.txt  input.c  lines.txt  tail
5-14/: input.c  lines.txt
5-15/: Makefile  input.c
5-16/: input.c  linesalphanum.txt
5-17/: Makefile  input.c  linestwofields.txt
5-18/: .gitignore  Makefile  README  dcl.c  dclcore.c  dclcore.h  undcl.c
5-2/: Makefile  input.c
5-3/: input.c
5-4/: input.c
5-5/: input.c
5-7/: Makefile  input.c
5-8/: Makefile  input.c
5-9/: input.c
6-1/: Makefile  input.c
6-2/: countwords  countwords.c
7-2/: random  (+2 more)
8-6/: .gdbinit  CMakeLists.txt  malloc.c
(+55 files in other folders)
